# fps

./: AGENTS.md  CMakeLists.txt  README.md
src/: main.cpp
